--- a/.github/workflows/github-actions-workflow.yml
+++ b/.github/workflows/github-actions-workflow.yml
@@ -1,16 +1,13 @@
-# This is a basic workflow to help you get started with Actions
+name: CI
 
-name: Run abaplint
-on: [pull_request]
+on: [push]
 
 jobs:
   abaplint:
-    name: abaplint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v1
-      - uses: actions/checkout@v2
-      - name: Run abaplint
-        run: |
-          npm -g install @abaplint/cli
-          abaplint
+    - uses: actions/checkout@v2
+    - name: abaplint
+      uses: abaplint/actions-abaplint@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
