--- a/.github/workflows/github-actions-workflow.yml
+++ b/.github/workflows/github-actions-workflow.yml
@@ -4,10 +4,14 @@ on: [push]
 
 jobs:
   abaplint:
+    name: abaplint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: abaplint
-      uses: abaplint/actions-abaplint@master
+      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - name: Run abaplint
+        run: |
+          npm -g install @abaplint/cli
+          abaplint
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
